force-app/main/default/objects/Work_Item__c/fields/All_Time_Delta__c.field-meta.xml
<CustomField>
    <fullName>All_Time_Delta__c</fullName>
    <formula>Est_Time__c - All_Time_Logged__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Time Delta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>