force-app/main/default/objects/Work_Item__c/fields/All_Time_Logged__c.field-meta.xml
<CustomField>
    <fullName>All_Time_Logged__c</fullName>
    <formula>Time_Logged__c +  Non_Billable_Time_Logged__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Time Logged</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>