force-app/main/default/objects/Work_Item__c/fields/Available_for_Time_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Time_Tracking__c</fullName>
    <formula>ISPICKVAL( Status__c, &quot;Approved&quot;)
|| ISPICKVAL( Status__c , &quot;In Progress&quot;)
|| ISPICKVAL( Status__c, &quot;Blocked&quot;)
|| ISPICKVAL ( Status__c, &quot;QA&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available for Time Tracking</label>
    <type>Checkbox</type>
</CustomField>