force-app/main/default/objects/Work_Item__c/fields/Billable_Delta__c.field-meta.xml
<CustomField>
    <fullName>Billable_Delta__c</fullName>
    <formula>Est_Time__c -  Time_Logged__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billable Delta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>