force-app/main/default/objects/Work_Item__c/fields/Blocked_Age__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Age__c</fullName>
    <label>Blocked Age</label>
    <length>80</length>
    <type>Text</type>
</CustomField>