force-app/main/default/objects/Work_Item__c/fields/Blocked_Reason__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Reason__c</fullName>
    <label>Blocked Reason</label>
    <type>TextArea</type>
</CustomField>