force-app/main/default/objects/Work_Item__c/fields/Budget_Variance__c.field-meta.xml
<CustomField>
    <fullName>Budget_Variance__c</fullName>
    <formula>If(Est_Time__c == 0,0,(Est_Time__c - Time_Logged__c) / Est_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>