force-app/main/default/objects/Work_Item__c/fields/Client_Data_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Data_Template_Name__c</fullName>
    <label>Client Data Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>