force-app/main/default/objects/Work_Item__c/fields/Documentation_URL__c.field-meta.xml
<CustomField>
    <fullName>Documentation_URL__c</fullName>
    <label>Documentation URL</label>
    <type>Url</type>
</CustomField>