force-app/main/default/objects/Work_Item__c/fields/Est_Overrun_Reason__c.field-meta.xml
<CustomField>
    <fullName>Est_Overrun_Reason__c</fullName>
    <label>Est Overrun Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>