force-app/main/default/objects/Work_Item__c/fields/Est_Project_Management__c.field-meta.xml
<CustomField>
    <fullName>Est_Project_Management__c</fullName>
    <formula>Est_Time__c  * Project__r.Project_Management__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Est. Project Management</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>