force-app/main/default/objects/Work_Item__c/fields/Est_Testing_UAT__c.field-meta.xml
<CustomField>
    <fullName>Est_Testing_UAT__c</fullName>
    <formula>Est_Time__c  *  Project__r.Testing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Est. Testing &amp; UAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>