force-app/main/default/objects/Work_Item__c/fields/Est_Time__c.field-meta.xml
<CustomField>
    <fullName>Est_Time__c</fullName>
    <label>Est. Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>