force-app/main/default/objects/Work_Item__c/fields/External_Block__c.field-meta.xml
<CustomField>
    <fullName>External_Block__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if the WI is blocked by the client or other external forces</inlineHelpText>
    <label>External Block</label>
    <type>Checkbox</type>
</CustomField>