force-app/main/default/objects/Work_Item__c/fields/Feature_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Feature_Sort_Order__c</fullName>
    <formula>Feature__r.Sort_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Feature Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>