force-app/main/default/objects/Work_Item__c/fields/Implementation__c.field-meta.xml
<CustomField>
    <fullName>Implementation__c</fullName>
    <label>Implementation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>