force-app/main/default/objects/Work_Item__c/fields/Importance__c.field-meta.xml
<CustomField>
    <fullName>Importance__c</fullName>
    <description>Importance of the work item</description>
    <label>Importance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Importance</valueSetName>
    </valueSet>
</CustomField>