force-app/main/default/objects/Work_Item__c/fields/Is_Assigned_To_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Assigned_To_Current_User__c</fullName>
    <formula>Assigned_To__c = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Assigned To Current User</label>
    <type>Checkbox</type>
</CustomField>