force-app/main/default/objects/Work_Item__c/fields/Is_Assigned_to_External_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Assigned_to_External_User__c</fullName>
    <formula>ISPICKVAL(Assigned_To__r.Profile.UserType, &apos;CustomerSuccess&apos;) ||
ISPICKVAL(Assigned_To__r.Profile.UserType, &apos;PowerCustomerSuccess&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Assigned to External User</label>
    <type>Checkbox</type>
</CustomField>