force-app/main/default/objects/Work_Item__c/fields/Is_Implemented__c.field-meta.xml
<CustomField>
    <fullName>Is_Implemented__c</fullName>
    <formula>OR(
ISPICKVAL( Status__c , &quot;Implemented&quot;),
ISPICKVAL( Status__c , &quot;Accepted&quot;),
ISPICKVAL( Status__c , &quot;Rejected&quot;),
ISPICKVAL( Status__c , &quot;Deployed&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Implemented</label>
    <type>Checkbox</type>
</CustomField>