force-app/main/default/objects/Work_Item__c/fields/Is_Optional__c.field-meta.xml
<CustomField>
    <fullName>Is_Optional__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Separates the work item from the others, putting it in a &quot;Recommended Options&quot; section of the proposal and removes it from all the total estimates</inlineHelpText>
    <label>Is Optional</label>
    <type>Checkbox</type>
</CustomField>