force-app/main/default/objects/Work_Item__c/fields/Is_Unapproved__c.field-meta.xml
<CustomField>
    <fullName>Is_Unapproved__c</fullName>
    <formula>OR(
ISPICKVAL( Status__c , &quot;Backlog&quot;),
ISPICKVAL( Status__c , &quot;Under Analysis&quot;),
ISPICKVAL( Status__c , &quot;Ready&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Unapproved</label>
    <type>Checkbox</type>
</CustomField>