force-app/main/default/objects/Work_Item__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <formula>HYPERLINK(&apos;/lightning/r/Work_Item__c/&apos; &amp; Id &amp; &apos;/view&apos;,  Subject__c , &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link</label>
    <type>Text</type>
</CustomField>