force-app/main/default/objects/Work_Item__c/fields/Non_Billable_Time_Logged__c.field-meta.xml
<CustomField>
    <fullName>Non_Billable_Time_Logged__c</fullName>
    <label>Non-Billable Time Logged</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>