force-app/main/default/objects/Work_Item__c/fields/Notify_client_of_status_changes__c.field-meta.xml
<CustomField>
    <fullName>Notify_client_of_status_changes__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Notify client of status changes</label>
    <type>Checkbox</type>
</CustomField>