force-app/main/default/objects/Work_Item__c/fields/Percentage_Complete__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Complete__c</fullName>
    <formula>IF(Est_Time__c == 0, 0, IF(Time_Logged__c &gt; Est_Time__c, 1, Time_Logged__c /  Est_Time__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>