force-app/main/default/objects/Work_Item__c/fields/Portal_URL__c.field-meta.xml
<CustomField>
    <fullName>Portal_URL__c</fullName>
    <formula>&apos;https://portal.r3.digital/s/work-item/&apos; + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portal URL</label>
    <type>Text</type>
</CustomField>