force-app/main/default/objects/Work_Item__c/fields/Process_Diagram_URL__c.field-meta.xml
<CustomField>
    <fullName>Process_Diagram_URL__c</fullName>
    <label>Process Diagram URL</label>
    <type>Url</type>
</CustomField>