force-app/main/default/objects/Work_Item__c/fields/Product_Owner2__c.field-meta.xml
<CustomField>
    <fullName>Product_Owner2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Owner</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Product owner must be a user/contact of the account the project belongs to</errorMessage>
        <filterItems>
            <field>User.Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>User.Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Items2</relationshipName>
    <type>Lookup</type>
</CustomField>