force-app/main/default/objects/Work_Item__c/fields/Project_Budget_Est_Time__c.field-meta.xml
<CustomField>
    <fullName>Project_Budget_Est_Time__c</fullName>
    <formula>IF ( Is_Unapproved__c, 0, 

IF ( Is_Implemented__c || Time_Logged__c &gt; Est_Time__c,  Time_Logged__c ,  Est_Time__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Budget Est Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>