force-app/main/default/objects/Work_Item__c/fields/Project_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Project_Is_Active__c</fullName>
    <formula>OR(
ISPICKVAL (Project__r.Status__c , &quot;Kick off&quot;),
ISPICKVAL (Project__r.Status__c , &quot;In Progress&quot;), ISPICKVAL (Project__r.Status__c , &quot;UAT&quot;), ISPICKVAL (Project__r.Status__c , &quot;Hyper care&quot;), ISPICKVAL(Project__r.Status__c, &quot;Support&quot;))</formula>
    <label>Project Is Active</label>
    <type>Checkbox</type>
</CustomField>