force-app/main/default/objects/Work_Item__c/fields/Related_Work_Item__c.field-meta.xml
<CustomField>
    <fullName>Related_Work_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Work Item</label>
    <referenceTo>Work_Item__c</referenceTo>
    <relationshipLabel>Related Work Items</relationshipLabel>
    <relationshipName>Related_Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>