force-app/main/default/objects/Work_Item__c/fields/Remaining_Budget_Hours__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Budget_Hours__c</fullName>
    <formula>IF ( Remaining_Hours__c &gt; 0 , Remaining_Hours__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Budget Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>