force-app/main/default/objects/Work_Item__c/fields/Remaining_Hours__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Hours__c</fullName>
    <formula>Est_Time__c -  Time_Logged__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>