force-app/main/default/objects/Work_Item__c/fields/Search_Information__c.field-meta.xml
<CustomField>
    <fullName>Search_Information__c</fullName>
    <description>Used in the search layout to display additional information about the Work Item</description>
    <formula>Subject__c + &apos;: &apos; + 
Project__r.Name +
IF(NOT(ISBLANK( Feature__c )), &apos; / &apos; + Feature__r.Name, &apos;&apos;) + 
IF(NOT(ISBLANK(Project_Phase__c)), &apos; / &apos; + Project_Phase__r.Name, &apos;&apos;)</formula>
    <label>Search Information</label>
    <type>Text</type>
</CustomField>