force-app/main/default/objects/Work_Item__c/fields/Set_to_Blocked__c.field-meta.xml
<CustomField>
    <fullName>Set_to_Blocked__c</fullName>
    <description>The date the WI was set to the Status Blocked</description>
    <label>Set to Blocked</label>
    <type>Date</type>
</CustomField>