force-app/main/default/objects/Work_Item__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <defaultValue>999</defaultValue>
    <inlineHelpText>Lowest at the top</inlineHelpText>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>