force-app/main/default/objects/Work_Item__c/fields/Sprint_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Is_Active__c</fullName>
    <formula>OR( 
ISBLANK( TEXT( Project_Phase__r.Stage__c ) ),
ISPICKVAL( Project_Phase__r.Stage__c , &apos;In Progress&apos;), 
ISBLANK( Project_Phase__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sprint Is Active</label>
    <type>Checkbox</type>
</CustomField>