force-app/main/default/objects/Work_Item__c/fields/Start_Timer__c.field-meta.xml
<CustomField>
    <fullName>Start_Timer__c</fullName>
    <formula>HYPERLINK(&quot;https://track.toggl.com/timer/start?wid=3516067&amp;desc=&quot; &amp;  Subject__c  &amp; &quot;&amp;billable=true&amp;pid=&quot; &amp;  TEXT(Toggl_Project_ID__c)  &amp; &quot;&amp;tid=&quot; &amp;  TEXT(Toggl_ID__c) , &quot;Start&quot; , &quot;blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Timer</label>
    <type>Text</type>
</CustomField>