force-app/main/default/objects/Work_Item__c/fields/Time_Entry_Name__c.field-meta.xml
<CustomField>
    <fullName>Time_Entry_Name__c</fullName>
    <formula>Name + &apos; - &apos; + Subject__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Entry Name</label>
    <type>Text</type>
</CustomField>