force-app/main/default/objects/Work_Item__c/fields/Toggl_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Toggl_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Toggl Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TogglAssignedWorkItems</relationshipName>
    <type>Lookup</type>
</CustomField>