force-app/main/default/objects/Work_Item__c/fields/Toggl_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Toggl_Project_ID__c</fullName>
    <formula>Project__r.Toggl_ID__c</formula>
    <label>Toggl Project ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>