force-app/main/default/objects/Work_Item__c/fields/Toggl_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Toggl_User_ID__c</fullName>
    <formula>Toggl_Assignee__r.Toggl_ID__c</formula>
    <label>Toggl User ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>