force-app/main/default/objects/Work_Item__c/fields/Total_Est__c.field-meta.xml
<CustomField>
    <fullName>Total_Est__c</fullName>
    <label>Total Est.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>