force-app/main/default/objects/Work_Item__c/fields/Urgency__c.field-meta.xml
<CustomField>
    <fullName>Urgency__c</fullName>
    <description>Urgency of the work item</description>
    <label>Urgency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Urgency</valueSetName>
    </valueSet>
</CustomField>