force-app/main/default/objects/Work_Item__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <label>User Story</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>