force-app/main/default/objects/Work_Item__c/fields/Work_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Item__c</fullName>
    <formula>HYPERLINK(Id, Name + &apos; - &apos; + Subject__c, &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Item</label>
    <type>Text</type>
</CustomField>