force-app/main/default/objects/Work_Item__c/validationRules/Require_Blocked_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Blocked_Reason</fullName>
    <active>true</active>
    <description>Work item must have a blocked reason to have its status marked as blocked</description>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;Blocked&quot;) &amp;&amp;
ISBLANK(Blocked_Reason__c)</errorConditionFormula>
    <errorDisplayField>Blocked_Reason__c</errorDisplayField>
    <errorMessage>Blocked Reason must be filled in when the Status is set to Blocked.</errorMessage>
</ValidationRule>