force-app/main/default/objects/Work_Item__c/listViews/All_Active.listView-meta.xml
<ListView>
    <fullName>All_Active</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Est_Time__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Feature__c</columns>
    <columns>Project_Phase__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Project__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved,Blocked,In Progress,Implemented,Accepted</value>
    </filters>
    <label>All Active</label>
</ListView>