force-app/main/default/objects/Work_Item__c/listViews/All_Completed.listView-meta.xml
<ListView>
    <fullName>All_Completed</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Project__c</columns>
    <columns>Priority__c</columns>
    <columns>Est_Time__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Rejected,Deployed</value>
    </filters>
    <label>All Rejected/Deployed</label>
</ListView>