force-app/main/default/objects/Work_Item__c/listViews/All_Connect_It.listView-meta.xml
<ListView>
    <fullName>All_Connect_It</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Est_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>startsWith</operation>
        <value>Connect It</value>
    </filters>
    <label>All Connect It</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>