force-app/main/default/objects/Work_Item__c/listViews/All_Future.listView-meta.xml
<ListView>
    <fullName>All_Future</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Project__c</columns>
    <columns>Priority__c</columns>
    <columns>Est_Time__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Backlog,Under Analysis,Ready</value>
    </filters>
    <label>All Future</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>