force-app/main/default/objects/Work_Item__c/listViews/All_In_Progress.listView-meta.xml
<ListView>
    <fullName>All_In_Progress</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Project__c</columns>
    <columns>Priority__c</columns>
    <columns>Est_Time__c</columns>
    <columns>Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>All In Progress</label>
</ListView>