force-app/main/default/objects/Work_Item__c/listViews/All_London_Medical.listView-meta.xml
<ListView>
    <fullName>All_London_Medical</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Description__c</columns>
    <columns>Est_Time__c</columns>
    <columns>Importance__c</columns>
    <columns>Urgency__c</columns>
    <columns>Priority__c</columns>
    <columns>Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>startsWith</operation>
        <value>London Medical</value>
    </filters>
    <label>All - London Medical</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>